# dmf2

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  pyproject.toml  staged_implementation_outline.md
artifacts/: staged_implementation_outline.md
data/example/migration-clean/input/: schema.sql  start.txt
data/example/migration/input/: patients_import.csv  run_setup.sh  setup.sql
data/example/snake/: instructions.txt  rules.txt
data/example/sql/: a.sql  b.sql
data/example/sql/runtime/: generated_output.sql
docs/: runtime-architecture.md  staged_implementation_outline.md
examples/: migration-clean.yaml  pipeline.yaml  snake.yaml
skills/artifact-writing/: SKILL.md
skills/code-review/: SKILL.md
skills/planning/: SKILL.md
src/dmf2_agents/: agents.py  artifacts.py  bootstrap.py  cli.py  config.py  domain.py  evaluators.py  events.py  logging.py  memory.py  orchestrator.py  prompting.py  providers.py  repository.py  runner.py  skills.py  stages.py  storage.py  tasks.py  tools.py
tests/: conftest.py  test_agents.py  test_evaluators.py  test_orchestrator.py  test_prompting.py  test_providers.py  test_repository.py  test_runner.py  test_skills.py  test_tools.py
tests/fixtures/: arbitrary_stage_names.yaml
